classes name change

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>
     </section>
 
-    <section class="cards">
-
-        <div class="card-con">
+    <section class="cards-aboutus">
+        <div class="cards-aboutus-container">
             <img class="img-3" src="img/img3.png" alt="">
-            <div class="card-text">
-                <h1 class="card-head">THREE-TIERED VETTING PROCESS</h1>
-                <p class="card-para">From shortlisting top candidates to their background checks, SOAL TECHNOLOGIES, one
+            <div class="cards-aboutus-text">
+                <h1 class="card-aboutus-head">THREE-TIERED VETTING PROCESS</h1>
+                <p class="card-aboutus-para">From shortlisting top candidates to their background checks, SOAL
+                    TECHNOLOGIES, one
                     of the leading technical job agencies, has a three-tiered vetting process that helps employers
                     evaluate which cutting-edge talent to add to their pipeline or recruit to fill the vacant position
                     in their company with credence. Employers rely on our end-to-end recruitment services backed by
@@ -39,11 +39,12 @@
             </div>
         </div>
 
-        <div class="card-con mission-card">
+        <div class="cards-aboutus-container mission-card">
             <img class="img-2" src="img/img2.png" alt="">
-            <div class="card-text">
-                <h1 class="card-head">OUR MISSION</h1>
-                <p class="card-para">We make lasting connections and strive to deliver what we promise, connecting great
+            <div class="cards-aboutus-text">
+                <h1 class="card-aboutus-head">OUR MISSION</h1>
+                <p class="card-aboutus-para">We make lasting connections and strive to deliver what we promise,
+                    connecting great
                     employers with even more incredible talent while being one of the best tech staffing agencies.
 
                     We make lasting connections and strive to deliver what we promise, connecting great employers with
